--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
     <title>Sarafan</title>
     <script th:inline="javascript">
         const frontendData = [[${frontendData}]];
+        const messages = [# th:utext="${messages}? ${messages} : '[]'" /];
     </script>
 </head>
 <body>
